Regression: snapping in graph editor with ctrl hotkey no longer functions properly #114588

Closed
opened 2023-11-07 17:28:13 +01:00 by Nathan Vegdahl · 4 comments
Member

System Information
Operating system: Gentoo Linux, x86-64
Graphics card: Radeon RX 7900 XT

Blender Version
Broken: 4.0 Beta - abe925d0c6 - 2023-11-06
Worked: 3.6.5

Short description of error

Holding down ctrl in the graph editor while moving keys no longer snaps vertically, nor does it snap in the same way as it used to horizontally.

Blender 3.6x and earlier always had the same behavior when holding down control: keys would snap to a zoom-level appropriate increment on both the vertical and horizontal axes.

Current Blender now behaves differently: when holding down ctrl, keys fail to snap at all vertically, and the horizontal behavior depends on the snap settings. If snap is set to either frames or seconds, ctrl will swap. If snap is set to none, ctrl does nothing.

The following videos demonstrate the difference. Both videos start moving the key without ctrl held down, and then switch to holding down ctrl.

3.6 4.0

The expected behavior is the same as Blender 3.6.

Exact steps for others to reproduce the error

  1. Set a keyframe on the default cube.
  2. Open a graph editor.
  3. Grab a key frame and start moving it around.
  4. While moving the key, hold down ctrl.
**System Information** Operating system: Gentoo Linux, x86-64 Graphics card: Radeon RX 7900 XT **Blender Version** Broken: 4.0 Beta - abe925d0c671 - 2023-11-06 Worked: 3.6.5 **Short description of error** Holding down ctrl in the graph editor while moving keys no longer snaps vertically, nor does it snap in the same way as it used to horizontally. Blender 3.6x and earlier always had the same behavior when holding down control: keys would snap to a zoom-level appropriate increment on both the vertical and horizontal axes. Current Blender now behaves differently: when holding down ctrl, keys fail to snap *at all* vertically, and the horizontal behavior depends on the snap settings. If snap is set to either frames or seconds, ctrl will swap. If snap is set to none, ctrl does nothing. The following videos demonstrate the difference. Both videos start moving the key without ctrl held down, and then switch to holding down ctrl. | 3.6 | 4.0 | |----|----| | <video src="/attachments/0c382521-fed1-4d29-ba5b-b3be047e671f" title="blender_3.6_graph_editor_ctrl.webm" controls></video> | <video src="/attachments/7e659c6e-4658-468a-ab94-4c1571a7f674" title="blender_4.0-beta_graph_editor_ctrl.webm" controls></video> | The expected behavior is the same as Blender 3.6. **Exact steps for others to reproduce the error** 1. Set a keyframe on the default cube. 2. Open a graph editor. 3. Grab a key frame and start moving it around. 4. While moving the key, hold down ctrl.
Nathan Vegdahl added the
Status
Needs Triage
Type
Report
Priority
Normal
labels 2023-11-07 17:28:13 +01:00
Iliya Katushenock added the
Interest
Animation & Rigging
label 2023-11-07 17:28:33 +01:00
Nathan Vegdahl added this to the Animation & Rigging project 2023-11-07 17:28:38 +01:00
Nathan Vegdahl added the
Module
Animation & Rigging
label 2023-11-07 17:28:51 +01:00
Nathan Vegdahl added this to the 4.0 milestone 2023-11-07 17:32:52 +01:00
Nathan Vegdahl added
Priority
High
and removed
Priority
Normal
labels 2023-11-07 17:33:12 +01:00
Christoph Lendenfeld was assigned by Nathan Vegdahl 2023-11-07 17:33:34 +01:00

so I couldn't figure out how that behavior was achieved in 3.6 and below.
What I did find out:
When pressing CTRL, the MOD_SNAP_INVERT flag is set
This flag means the autosnap mode will return as SACTSNAP_OFF (in transform_snap_animation.c/61 on the 3.6 release branch)

But how the code goes from "snap disabled" to "snapping increments" I don't understand yet

so I couldn't figure out how that behavior was achieved in 3.6 and below. What I did find out: When pressing CTRL, the `MOD_SNAP_INVERT` flag is set This flag means the autosnap mode will return as `SACTSNAP_OFF` (in transform_snap_animation.c/61 on the 3.6 release branch) But how the code goes from "snap disabled" to "snapping increments" I don't understand yet
Germano Cavalcante added
Status
Confirmed
and removed
Status
Needs Triage
Interest
Animation & Rigging
labels 2023-11-07 22:46:27 +01:00

I imagine the behavior changed with a41da206cd

In fact, the code is confusing, and the incremental snap option doesn't even appear in the snapping popover.

Removing it seems more correct than before, but to avoid regression, it might be good to add the Incremenal Snap option to the popover.

This snap has generic code (it is not in recalcData). It depends on the transformation mode. The code is in transform_snap_increment_ex.

I imagine the behavior changed with a41da206cd In fact, the code is confusing, and the incremental snap option doesn't even appear in the snapping popover. Removing it seems more correct than before, but to avoid regression, it might be good to add the Incremenal Snap option to the popover. This snap has generic code (it is not in recalcData). It depends on the transformation mode. The code is in `transform_snap_increment_ex`.

I found the issue.
I would argue this was never an intended feature, but more on that in the PR I will link shortly

I found the issue. I would argue this was never an intended feature, but more on that in the PR I will link shortly
Author
Member

I would argue this was never an intended feature

Yeah, that doesn't surprise me, honestly. Still good to match the old behavior first, though, I think. Then we can figure out where to go from there.

> I would argue this was never an intended feature Yeah, that doesn't surprise me, honestly. Still good to match the old behavior first, though, I think. Then we can figure out where to go from there.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-09 14:38:42 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114588
No description provided.